--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,3 +1,4 @@
 .container {
-    padding: 0 1rem 1rem 1rem;
+  padding: 0 1rem 1rem 1rem;
+  margin: 0 auto;
 }
